--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     container_name: django
     image: django:1
     build: ./srcs/django/
+    depends_on:
+      - postgresql
     ports:
       - '8000:8000'
     # volumes:
@@ -23,6 +25,22 @@ services:
       - '5432:5432'
     env_file:
       - .env
+    networks:
+      - transcendance
+    # restart: always
+
+  nginx:
+    container_name: nginx
+    image: nginx:1
+    build: ./srcs/nginx/
+    ports:
+      - '443:443'
+    volumes:
+      - postgressql_volume:/var/lib/postgresql/data
+    env_file:
+      - .env
+    depends_on:
+      - postgresql
     networks:
       - transcendance
     # restart: always
