--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-POSTGRES_DB=postgredb
-POSTGRES_USER=user
-POSTGRES_PASSWORD=user_password
+POSTGRES_DB=transcendence
+POSTGRES_USER=tranuser
+POSTGRES_PASSWORD=transcendence_password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
