--- a/srcs/postgresql/conf/postgresql.conf
+++ b/srcs/postgresql/conf/postgresql.conf
@@ -78,11 +78,11 @@ unix_socket_directories = '/var/run/postgresql' # comma-separated list of direct
 # - TCP settings -
 # see "man tcp" for details
 
-#tcp_keepalives_idle = 0		# TCP_KEEPIDLE, in seconds;
+tcp_keepalives_idle = 60		# TCP_KEEPIDLE, in seconds;
 					# 0 selects the system default
-#tcp_keepalives_interval = 0		# TCP_KEEPINTVL, in seconds;
+tcp_keepalives_interval = 10		# TCP_KEEPINTVL, in seconds;
 					# 0 selects the system default
-#tcp_keepalives_count = 0		# TCP_KEEPCNT;
+tcp_keepalives_count = 6		# TCP_KEEPCNT;
 					# 0 selects the system default
 #tcp_user_timeout = 0			# TCP_USER_TIMEOUT, in milliseconds;
 					# 0 selects the system default
@@ -104,7 +104,7 @@ unix_socket_directories = '/var/run/postgresql' # comma-separated list of direct
 
 # - SSL -
 
-ssl = on
+ssl = off
 #ssl_ca_file = ''
 ssl_cert_file = '/etc/ssl/certs/ssl-cert-snakeoil.pem'
 #ssl_crl_file = ''
