--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - '8000:8000'
     volumes:
       - django_volume:/project
+      - frontend_volume:/var/www/html
     env_file:
       - .env
     networks:
@@ -45,22 +46,41 @@ services:
       - transcendence
     # restart: always
 
+  frontend:
+    container_name: frontend
+    image: frontend:1
+    build: ./srcs/frontend/
+    networks:
+      - transcendence
+    volumes:
+      - frontend_volume:/var/www/html
+    # restart: always
+
 volumes:
   django_volume:
     name: django_volume
     driver: local
     driver_opts:
       type : none
-      device: /home/user/ecole_42/transcendence/data/django_volume
-      # device: /Users/yuuuuki/ecole_42/transcendence/data/django_volume
+      # device: /home/user/ecole_42/transcendence/data/django_volume
+      device: /Users/yuuuuki/ecole_42/transcendence/data/django_volume
       o : bind
   postgresql_volume:
     name: postgresql_volume
     driver: local
     driver_opts:
       type : none
-      device: /home/user/ecole_42/transcendence/data/postgresql_volume
-      # device: /Users/yuuuuki/ecole_42/transcendence/data/postgresql_volume
+      # device: /home/user/ecole_42/transcendence/data/postgresql_volume
+      device: /Users/yuuuuki/ecole_42/transcendence/data/postgresql_volume
+      o : bind
+
+  frontend_volume:
+    name: frontend_volume
+    driver: local
+    driver_opts:
+      type : none
+      # device: /home/user/ecole_42/transcendence/data/frontend_volume
+      device: /Users/yuuuuki/ecole_42/transcendence/data/frontend_volume
       o : bind
 
 networks:
