--- a/srcs/postgresql/Dockerfile
+++ b/srcs/postgresql/Dockerfile
@@ -2,39 +2,48 @@
 FROM debian:11
 
 # Install prerequisites
-RUN apt-get update && apt-get install -y wget gnupg2
+RUN apt-get update && apt-get install -y \
+    wget \
+    gnupg2 \
+    lsb-release
 
-# Add PostgreSQL APT repository
-RUN wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt bullseye-pgdg main" > /etc/apt/sources.list.d/pgdg.list
+# Add PostgreSQL repository
+RUN wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
+    echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
 
-# Update package list and install PostgreSQL
-RUN apt-get update && apt-get install -y postgresql postgresql-common postgresql-contrib
+# Install PostgreSQL
+RUN apt-get update && apt-get install -y \
+    postgresql-17 \
+    postgresql-contrib-17 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-# Cleanup
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+# Create symbolic link for postgres command
+RUN ln -s /usr/lib/postgresql/17/bin/postgres /usr/local/bin/postgres
 
-# Create data directory and set permissions
-RUN mkdir -p /var/lib/postgresql/data && chown -R postgres:postgres /var/lib/postgresql
+# Create temporary directory and set permissions
+RUN mkdir -p /tmp/postgres && \
+    chown postgres:postgres /tmp/postgres
 
-COPY ./conf/postgresql.conf /etc/postgresql/17/main/postgresql.conf
+# Copy configuration files to temporary location
+COPY ./conf/postgresql.conf /tmp/postgres/
+COPY ./conf/pg_hba.conf /tmp/postgres/
+RUN chown -R postgres:postgres /tmp/postgres
 
 COPY ./tools/setup_postgres.sh /setup_postgres.sh
 RUN chmod +x /setup_postgres.sh
 
-COPY ./conf/pg_hba.conf /etc/postgresql/17/main/pg_hba.conf
-# COPY ./conf/.my_pgpass /var/lib/postgresql/.pgpass
-# COPY ./conf/.pg_service.conf /var/lib/postgresql/.pg_service.conf
-# RUN chmod 0600 /var/lib/postgresql/.pgpass
-
-# Switch to postgres user to initialize the database
+# Switch to postgres user
 USER postgres
 
-# Ensure the PostgreSQL binaries are in the PATH
-ENV PATH="/usr/lib/postgresql/17/bin:$PATH"
-
-# Initialize the database cluster
-RUN /usr/lib/postgresql/17/bin/initdb -D /var/lib/postgresql/data
+# Initialize database with clean directory
+RUN rm -rf /var/lib/postgresql/data/* && \
+    /usr/lib/postgresql/17/bin/initdb -D /var/lib/postgresql/data \
+    --encoding=UTF8 \
+    --locale=C.UTF-8 && \
+    mv /tmp/postgres/postgresql.conf /var/lib/postgresql/data/ && \
+    mv /tmp/postgres/pg_hba.conf /var/lib/postgresql/data/ && \
+    chmod 600 /var/lib/postgresql/data/pg_hba.conf
 
 EXPOSE 5432
 
