--- a/srcs/postgresql/conf/pg_hba.conf
+++ b/srcs/postgresql/conf/pg_hba.conf
@@ -124,7 +124,7 @@ local   all             all                                     trust
 
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            trust
-host    all             all             0.0.0.0/0              md5
+host    all             all             0.0.0.0/0                scram-sha-256
 
 # IPv6 local connections:
 host    all             all             ::1/128                 trust
