--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -3,22 +3,48 @@ events {
 }
 
 http {
-    server
-    {
-        listen 80;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-        # Serveur pour le jeu Pong
-        location /pong/ {
-            root /usr/share/nginx/html;
-            index index.html;
-        }
+    access_log /dev/stdout;
+    error_log /dev/stderr;
+
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+
+        listen 80;
+        listen [::]:80;
+        server_name localhost;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/transcendence.crt;
         ssl_certificate_key /etc/nginx/ssl/transcendence.key;
 
-        # Proxy vers Django
+        root /project/templates/tran_app;
+
+        location /static/ {
+            alias /project/static/;
+            try_files $uri $uri/ =404;
+        }
+
+        location /admin/static/ {
+            alias /project/static/admin/;
+            try_files $uri $uri/ =404;
+        }
+
+        location /api/ {
+            proxy_pass http://django:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
         location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        location /admin/ {
             proxy_pass http://django:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
