--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - django_volume:/project
+      - frontend_volume:/var/www/html
     env_file:
       - .env
     depends_on:
@@ -61,7 +61,7 @@ services:
     networks:
       - transcendence
     volumes:
-      - django_volume:/project
+      - frontend_volume:/var/www/html
     depends_on:
       - django
     # restart: always
@@ -84,14 +84,14 @@ volumes:
       device: /Users/yuuuuki/ecole_42/transcendence/data/postgresql_volume
       o : bind
 
-  # frontend_volume:
-  #   name: frontend_volume
-  #   driver: local
-  #   driver_opts:
-  #     type : none
-  #     # device: /home/user/ecole_42/transcendence/data/frontend_volume
-  #     device: /Users/yuuuuki/ecole_42/transcendence/data/frontend_volume
-  #     o : bind
+  frontend_volume:
+    name: frontend_volume
+    driver: local
+    driver_opts:
+      type : none
+      # device: /home/user/ecole_42/transcendence/data/frontend_volume
+      device: /Users/yuuuuki/ecole_42/transcendence/data/frontend_volume
+      o : bind
 
 networks:
   transcendence:
