--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -9,6 +9,11 @@ http {
     access_log /dev/stdout;
     error_log /dev/stderr;
 
+    # WebSocket timeout settings
+    proxy_read_timeout 3600;
+    proxy_connect_timeout 3600;
+    proxy_send_timeout 3600;
+
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
@@ -21,15 +26,15 @@ http {
         ssl_certificate /etc/nginx/ssl/transcendence.crt;
         ssl_certificate_key /etc/nginx/ssl/transcendence.key;
 
-        root /project/templates/tran_app;
+        root /var/www/html;
 
         location /static/ {
-            alias /project/static/;
+            alias /var/www/html/static/;
             try_files $uri $uri/ =404;
         }
 
         location /admin/static/ {
-            alias /project/static/admin/;
+            alias /var/www/html/static/admin/;
             try_files $uri $uri/ =404;
         }
 
@@ -46,6 +51,17 @@ http {
 
         location /admin/ {
             proxy_pass http://django:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # WebSocket connection handling
+        location /ws/ {
+            proxy_pass http://django:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
