--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -65,6 +65,13 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+
+            proxy_buffering off;
+            proxy_redirect off;
         }
     }
 }
