show user info on mypage. update(not working yet). add profile image to user(not working yet)

--- a/srcs/django/Dockerfile
+++ b/srcs/django/Dockerfile
@@ -43,7 +43,7 @@ RUN chmod +x /setups_backend.sh
 
 EXPOSE 8000
 RUN apt update && apt install -y postgresql-client
-RUN pip install psycopg[binary] channels[daphne] django-cors-headers
+RUN pip install psycopg[binary] channels[daphne] django-cors-headers Pillow
 
 WORKDIR /project
 
