--- a/srcs/nginx/conf/nginx.conf
+++ b/srcs/nginx/conf/nginx.conf
@@ -14,12 +14,19 @@ http {
     proxy_connect_timeout 3600;
     proxy_send_timeout 3600;
 
+    # Separate server block for HTTP to HTTPS redirect
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name localhost;
+
+        # Redirect all HTTP requests to HTTPS
+        return 301 https://$server_name$request_uri;
+    }
+
     server {
         listen 443 ssl;
         listen [::]:443 ssl;
-
-        listen 80;
-        listen [::]:80;
         server_name localhost;
 
         ssl_protocols TLSv1.2 TLSv1.3;
