add game history as another app(not working inside profile page)

--- a/srcs/django/Dockerfile
+++ b/srcs/django/Dockerfile
@@ -31,12 +31,7 @@ RUN mkdir project
 
 RUN django-admin startproject backend_project project
 
-RUN cd /project && python3.11 manage.py startapp backend_app && python3.11 manage.py startapp usrman_app
-
-#config des urls
-COPY ./backendApp /project/backend_app/
-COPY ./usrmanApp /project/usrman_app/
-COPY ./backendProject /project/backend_project/
+RUN cd /project && python3.11 manage.py startapp backend_app && python3.11 manage.py startapp usrman_app && python3.11 manage.py startapp pong_history_app
 
 COPY /tools/setups_backend.sh /setups_backend.sh
 RUN chmod +x /setups_backend.sh
@@ -44,6 +39,12 @@ RUN chmod +x /setups_backend.sh
 EXPOSE 8000
 RUN apt update && apt install -y postgresql-client
 RUN pip install psycopg[binary] channels[daphne] django-cors-headers Pillow
+
+#config des urls
+COPY ./backendApp /project/backend_app/
+COPY ./usrmanApp /project/usrman_app/
+COPY ./pongHistoryApp /project/pong_history_app/
+COPY ./backendProject /project/backend_project/
 
 WORKDIR /project
 
