--- a/srcs/django/Dockerfile
+++ b/srcs/django/Dockerfile
@@ -35,7 +35,8 @@ RUN cd /project && python3.11 manage.py startapp backend_app \
 	 && python3.11 manage.py startapp backend_gamecons_app \
 	 && python3.11 manage.py startapp backend_tour_app \
 	 && python3.11 manage.py startapp usrman_app \
-	 && python3.11 manage.py startapp pong_history_app
+	 && python3.11 manage.py startapp pong_history_app \
+	 && python3.11 manage.py startapp online_status_app
 
 
 EXPOSE 8000
@@ -43,6 +44,7 @@ EXPOSE 8000
 RUN apt update && apt install -y postgresql-client
 RUN pip install psycopg[binary] channels[daphne] django-cors-headers Pillow
 
+ENV DJANGO_SETTINGS_MODULE=backend_project.settings
 
 #config des urls
 COPY ./backendApp /project/backend_app/
@@ -52,7 +54,7 @@ COPY ./backendGameConsApp /project/backend_gamecons_app/
 COPY ./backendTourApp /project/backend_tour_app/
 COPY /tools/setups_backend.sh /setups_backend.sh
 COPY ./usrmanApp /project/usrman_app/
-
+COPY ./onlineStatusApp /project/online_status_app/
 RUN chmod +x /setups_backend.sh
 
 
