--- a/srcs/django/Dockerfile
+++ b/srcs/django/Dockerfile
@@ -27,10 +27,9 @@ RUN cd Python-3.11.1 && ./configure --enable-optimizations && make -j 2 && make 
 RUN wget https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py
 
 RUN pip3.11 install django && pip install python-decouple
-#RUN apt-get update && apt-get install -y gettext
+
 RUN mkdir project
-#WORKDIR /project
-#RUN mkdir -p /project/locale
+
 RUN django-admin startproject backend_project project
 
 RUN cd /project && python3.11 manage.py startapp backend_app \
@@ -51,7 +50,7 @@ COPY ./tools/setups_backend.sh /setups_backend.sh
 COPY ./usrmanApp /project/usrman_app/
 COPY ./locale /project/locale/
 
-WORKDIR /project
+# WORKDIR /project
 
 ENV PYTHONPATH=/project
 # Vérifier le chemin Python et la présence du module
@@ -59,14 +58,15 @@ ENV PYTHONPATH=/project
 #RUN python3.11 -c "import backend_project.settings"
 #RUN ls -l /project/backend_project && python3.11 -c "import backend_project.settings"
 
-RUN for lang in fr es ja; do \
-    django-admin makemessages -l $lang --verbosity 2 --keep-pot \
-    --settings=backend_project.settings -d django --extension=html,py \
-	--ignore=venv --no-location --no-wrap --locale=$lang; \
-done
-
+# RUN for lang in fr es ja; do \
+#     django-admin makemessages -l $lang --verbosity 2 --keep-pot \
+#     --settings=backend_project.settings -d django --extension=html,py \
+# 	--ignore=venv --no-location --no-wrap --locale=$lang; \
+# done
 
 RUN django-admin compilemessages -i venv --settings=backend_project.settings
+
+
 
 EXPOSE 8000
 
