--- a/srcs/django/Dockerfile
+++ b/srcs/django/Dockerfile
@@ -31,14 +31,14 @@ RUN mkdir project
 
 RUN django-admin startproject backend_project project
 
-RUN cd /project && python3.11 manage.py startapp game_multi_app \
-	 && python3.11 manage.py startapp local_normal_name_app \
-	 && python3.11 manage.py startapp tournement_app \
-	 && python3.11 manage.py startapp user_management_app \
-	 && python3.11 manage.py startapp pong_history_app \
-	 && python3.11 manage.py startapp remote_normal_game_app \
-	 && python3.11 manage.py startapp online_status_app
-
+RUN cd /project && python3.11 manage.py startapp local_multi_game_app \
+	&& python3.11 manage.py startapp local_normal_name_app \
+	&& python3.11 manage.py startapp local_tournement_app \
+	&& python3.11 manage.py startapp local_ai_game_app \
+	&& python3.11 manage.py startapp user_management_app \
+	&& python3.11 manage.py startapp pong_history_app \
+	&& python3.11 manage.py startapp remote_normal_game_app \
+	&& python3.11 manage.py startapp online_status_app 
 
 EXPOSE 8000
 
@@ -49,10 +49,11 @@ ENV DJANGO_SETTINGS_MODULE=backend_project.settings
 
 #config des urls
 COPY ./backend_project /project/backend_project/
-COPY ./application/game_multi_app /project/game_multi_app/
-COPY ./application/pong_history_app /project/pong_history_app/
+COPY ./application/local_multi_game_app /project/local_multi_game_app/
 COPY ./application/local_normal_game_app /project/local_normal_game_app/
-COPY ./application/tournement_app /project/tournement_app/
+COPY ./application/local_ai_game_app /project/local_ai_game_app/
+COPY ./application/local_tournement_app /project/local_tournement_app/
+COPY ./application/pong_history_app /project/pong_history_app/
 COPY ./application/user_management_app /project/user_management_app/
 COPY ./application/remote_normal_game_app/* /project/remote_normal_game_app/
 COPY ./application/online_status_app /project/online_status_app/
